src/test/ui/consts/issue-56164.stderr
error[E0015]: cannot call non-const closure in constant functions
  --> $DIR/issue-56164.rs:1:18
   |
LL | const fn foo() { (||{})() }
   |                  ^^^^^^^^
   |
   = note: closures need an RFC before allowed to be called in constant functions
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: function pointer calls are not allowed in constant functions
  --> $DIR/issue-56164.rs:7:5
   |
LL |     input()
   |     ^^^^^^^

error: erroneous constant used
  --> $DIR/issue-56164.rs:1:18
   |
LL | const fn foo() { (||{})() }
   |                  ^^^^^^ referenced constant has errors
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: `#[deny(const_err)]` on by default

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0015`.
Future incompatibility report: Future breakage diagnostic:
error: erroneous constant used
  --> $DIR/issue-56164.rs:1:18
   |
LL | const fn foo() { (||{})() }
   |                  ^^^^^^ referenced constant has errors
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: `#[deny(const_err)]` on by default

